--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "axios": "^1.6.4",
+        "axios": "^1.6.7",
         "laravel-vite-plugin": "^1.0.0",
+        "sass": "^1.70.0",
         "vite": "^5.0.0"
     },
     "dependencies": {
@@ -16,7 +17,11 @@
         "@fullcalendar/vue3": "^6.1.10",
         "@inertiajs/vue3": "^1.0.14",
         "@vitejs/plugin-vue": "^5.0.3",
+        "@vueup/vue-quill": "^1.2.0",
         "moment": "^2.30.1",
-        "vue": "^3.4.15"
+        "quill-image-uploader": "^1.3.0",
+        "sweetalert2": "^11.10.5",
+        "vue": "^3.4.15",
+        "vue-wysiwyg": "^1.7.2"
     }
 }
