--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
         "@inertiajs/vue3": "^1.0.14",
         "@vitejs/plugin-vue": "^5.0.3",
         "@vueup/vue-quill": "^1.2.0",
+        "maska": "^2.1.11",
         "moment": "^2.30.1",
+        "primevue": "^3.48.1",
+        "quill": "^1.3.7",
         "quill-image-uploader": "^1.3.0",
         "sweetalert2": "^11.10.5",
+        "v-mask": "^2.3.0",
         "vue": "^3.4.15",
+        "vue-the-mask": "^0.11.1",
         "vue-wysiwyg": "^1.7.2"
     }
 }
