--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@vueup/vue-quill": "^1.2.0",
         "maska": "^2.1.11",
         "moment": "^2.30.1",
+        "pinia": "^2.1.7",
         "primeflex": "^3.3.1",
         "primeicons": "^6.0.1",
         "primevue": "^3.48.1",
