--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     },
     "dependencies": {
         "@fullcalendar/daygrid": "^6.1.10",
+        "@fullcalendar/interaction": "^6.1.11",
         "@fullcalendar/timegrid": "^6.1.10",
         "@fullcalendar/vue3": "^6.1.10",
         "@inertiajs/vue3": "^1.0.14",
