--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "sweetalert2": "^11.10.5",
         "v-mask": "^2.3.0",
         "vue": "^3.4.15",
+        "vue-loading-overlay": "^6.0.4",
         "vue-the-mask": "^0.11.1",
         "vue-wysiwyg": "^1.7.2"
     }
