--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@fullcalendar/vue3": "^6.1.10",
         "@inertiajs/vue3": "^1.0.14",
         "@vitejs/plugin-vue": "^5.0.3",
+        "@vuepic/vue-datepicker": "^8.3.1",
         "@vueup/vue-quill": "^1.2.0",
         "maska": "^2.1.11",
         "moment": "^2.30.1",
