--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "guzzlehttp/guzzle": "^7.2",
+        "guzzlehttp/guzzle": "^7.8",
         "inertiajs/inertia-laravel": "^0.6.11",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "league/flysystem-ftp": "^3.0"
+        "league/flysystem-ftp": "^3.0",
+        "snowfire/beautymail": "^1.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
