--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "league/flysystem-ftp": "^3.0",
+        "pusher/pusher-php-server": "^7.2",
         "snowfire/beautymail": "^1.1"
     },
     "require-dev": {
