--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     },
     "devDependencies": {
         "axios": "^1.6.7",
+        "laravel-echo": "^1.16.1",
         "laravel-vite-plugin": "^1.0.0",
+        "pusher-js": "^8.4.0-rc2",
         "sass": "^1.70.0",
         "vite": "^5.0.0"
     },
